welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:2: error: value ! is not a member of Boolean
while (estFaceMur!) {avancer()
                 ^Program:2: error: not found: value avancer
while (estFaceMur!) {avancer()
                     ^